--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,13 @@
 sonar.projectKey=MikeDombrowski:SchedGen
 # this is the name displayed in the SonarQube UI
 sonar.projectName=SchedGen
-sonar.projectVersion=1.5
+sonar.projectVersion=1.6
 
-sonar.sources=.
-sonar.exclusions=.idea/*,.idea/**,.git/*,.git/**,build/*,build/**,docs/*,docs/**,vendor/*,vendor/**,js/*,js/**,Seminar.html,importer/Classes/*,importer/Classes/**,css/*,fonts/*
+sonar.sources=src/,src/public/js/homepageFunctions.js
+sonar.exclusions=src/vendor/*,src/vendor/**,test/*,test/**,src/Seminar.html,src/importer/Classes/*,src/importer/Classes/**,src/public/js/*
+sonar.tests=test/
+sonar.php.coverage.reportPaths=build/logs/clover.xml
+sonar.php.tests.reportPath=build/logs/junit.xml
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
