--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"babel-loader": "^7.1.4",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-es2015": "^6.24.1",
+		"clean-webpack-plugin": "^0.1.19",
 		"webpack": "^4.2.0",
 		"webpack-cli": "^2.0.13"
 	}
