--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"babel-preset-es2015": "^6.24.1",
 		"clean-webpack-plugin": "^0.1.19",
 		"webpack": "^4.2.0",
-		"webpack-cli": "^2.0.13"
+		"webpack-cli": "^2.0.13",
+		"webpack-polyfill-injector": "^1.0.1"
 	}
 }
