--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-	"name": "University-Schedule-Generator",
-	"version": "1.0.0",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/MikeDombo/university-schedule-generator.git"
-	},
-	"scripts": {
-		"build-dev": "webpack --mode development",
-		"build": "webpack --mode production",
-		"webpackStats": "webpack --json --mode production | webpack-bundle-size-analyzer",
-		"sonarqube": "c:\\sonar\\sonar-scanner-3.0.3\\bin\\sonar-scanner.bat"
-	},
-	"keywords": [],
-	"author": "Michael Dombrowski",
-	"bugs": {
-		"url": "https://github.com/MikeDombo/university-schedule-generator/issues"
-	},
-	"homepage": "https://github.com/MikeDombo/university-schedule-generator#readme",
-	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.5",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-es2015": "^6.24.1",
-		"clean-webpack-plugin": "^0.1.19",
-		"webpack": "^4.29.3",
-		"webpack-cli": "^2.1.5",
-		"webpack-polyfill-injector": "^1.0.2"
-	}
+    "name": "University-Schedule-Generator",
+    "version": "1.0.0",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/MikeDombo/university-schedule-generator.git"
+    },
+    "scripts": {
+        "build-dev": "webpack --mode development",
+        "build": "webpack --mode production",
+        "webpackStats": "webpack --json --mode production | webpack-bundle-size-analyzer",
+        "sonarqube": "c:\\sonar\\sonar-scanner-3.0.3\\bin\\sonar-scanner.bat"
+    },
+    "keywords": [],
+    "author": "Michael Dombrowski",
+    "bugs": {
+        "url": "https://github.com/MikeDombo/university-schedule-generator/issues"
+    },
+    "homepage": "https://github.com/MikeDombo/university-schedule-generator#readme",
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "clean-webpack-plugin": "^3.0.0",
+        "webpack": "^4.34.0",
+        "webpack-cli": "^3.3.4"
+    }
 }
