Move code back into main page from external JS to prevent function not found errors

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=SchedGen
 sonar.projectVersion=1.6
 
 sonar.sources=src/,src/public/js/homepageFunctions.js
-sonar.exclusions=src/vendor/*,src/vendor/**,test/*,test/**,src/Seminar.html,src/importer/Classes/*,src/importer/Classes/**,src/public/js/*
+sonar.exclusions=src/vendor/*,src/vendor/**,test/*,test/**,src/Seminar.html,src/importer/Classes/*,src/importer/Classes/**,src/public/js/*,src/importer/upload.php
 sonar.tests=test/
 sonar.php.coverage.reportPaths=build/logs/clover.xml
 sonar.php.tests.reportPath=build/logs/junit.xml
